--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <!-- Video Background -->
     <div class="video-background">
-        <video autoplay muted loop playsinline webkit-playsinline preload="auto">
+        <video autoplay muted loop playsinline webkit-playsinline preload="auto" x-webkit-airplay="allow" disablePictureInPicture>
             <source src="video/bg.mp4" type="video/mp4">
         </video>
     </div>
