Enhance overlay z-index and add clip-path to hide play button on iOS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <video id="bgVideo" autoplay muted loop playsinline webkit-playsinline preload="auto" x-webkit-airplay="allow" disablePictureInPicture style="width: 100%; height: 100%; object-fit: cover; -webkit-media-controls: none; -webkit-media-controls-enclosure: none;">
             <source src="video/bg.mp4" type="video/mp4">
         </video>
-        <div class="video-play-button-overlay"></div>
+        <div class="video-play-button-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 999; pointer-events: none; background: transparent;"></div>
     </div>
     <div class="video-overlay"></div>
     
